Funcional 3.0: Detalles graficos (simbolos en conversiones) y nombre en el main_activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:layout_marginBottom="32dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Monto a Convertir"
+        android:hint="@string/WaterHint"
         android:inputType="textPersonName|number"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/BTConvertir"
