--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="@string/WaterHint"
-        android:inputType="textPersonName|number"
+        android:inputType="numberDecimal"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/BTConvertir"
         app:layout_constraintEnd_toEndOf="parent"
